--- a/index.html
+++ b/index.html
@@ -125,23 +125,23 @@
       const pv = p('puntoVendita');
 
       const msg = `DATI SERALI ORE 20 - ${pv}:\n\n` +
-        `* VENDUTO GIORNO: ${p('venduto')}\n\n` +
-        `* AV BUDGET MESE %: ${p('budget')}\n\n` +
-        `* FINANZIAMENTI / SAFEGUARD: ${p('safeguard')}\n\n` +
-        `* INCIDENZA XD PED GIORNO: ${p('xdped')}\n\n` +
-        `* DELTA EKOS MESE IN CORSO: ${p('ekos')}\n\n` +
-        `* DELTA SBS MESE IN CORSO: ${p('sbs')}\n\n` +
-        `* DELTA XDE MESE TOTALE: ${p('xde')}\n\n` +
-        `* IPHONE TOTALI / GARANZIE: ${p('iphone')}\n\n` +
-        `* APPLE INFO / GARANZIE: ${p('apple')}\n\n` +
-        `* ATTIVAZIONI HO: ${p('ho')}\n\n` +
-        `* ATTIVAZIONI VERY MOBILE: ${p('very')}\n\n` +
-        `* OLED: ${p('oled')}\n\n` +
-        `* AEG BIANCO: ${p('aeg')}\n\n` +
-        `* ASCIUGATRICI: ${p('asciugatrici')}\n\n` +
-        `* SCOPE NO FILI: ${p('scope')}\n\n` +
-        `* I-ROBOT: ${p('irobot')}\n\n` +
-        `* CAFFÈ AUTOMATICHE: ${p('caffe')}`;
+        ` VENDUTO GIORNO: ${p('venduto')}\n\n` +
+        ` AV BUDGET MESE %: ${p('budget')}\n\n` +
+        ` FINANZIAMENTI / SAFEGUARD: ${p('safeguard')}\n\n` +
+        ` INCIDENZA XD PED GIORNO: ${p('xdped')}\n\n` +
+        ` DELTA EKOS MESE IN CORSO: ${p('ekos')}\n\n` +
+        ` DELTA SBS MESE IN CORSO: ${p('sbs')}\n\n` +
+        ` DELTA XDE MESE TOTALE: ${p('xde')}\n\n` +
+        ` IPHONE TOTALI / GARANZIE: ${p('iphone')}\n\n` +
+        ` APPLE INFO / GARANZIE: ${p('apple')}\n\n` +
+        ` ATTIVAZIONI HO: ${p('ho')}\n\n` +
+        ` ATTIVAZIONI VERY MOBILE: ${p('very')}\n\n` +
+        ` OLED: ${p('oled')}\n\n` +
+        ` AEG BIANCO: ${p('aeg')}\n\n` +
+        ` ASCIUGATRICI: ${p('asciugatrici')}\n\n` +
+        ` SCOPE NO FILI: ${p('scope')}\n\n` +
+        ` I-ROBOT: ${p('irobot')}\n\n` +
+        ` CAFFÈ AUTOMATICHE: ${p('caffe')}`;
 
       const encoded = encodeURIComponent(msg);
       window.open(`https://t.me/share/url?url=&text=${encoded}`, '_blank');
