--- a/index.html
+++ b/index.html
@@ -121,17 +121,17 @@
         `VENDUTO GIORNO  : €${p('venduto')}\n` +
         `AV BUDGET MESE   : ${p('budget')}%\n\n` +
         `FINANZ. / SAFEGUARD ${p('safeguard')}\n\n` +
-        `INCID. XD PED GIORNO ${p('xdped')}%\n\n` +
+        `INCID.XD PED OGGI ${p('xdped')}%\n\n` +
         `DELTA EKOS MESE  €${p('ekos')}\n` +
         `DELTA SBS MESE   €${p('sbs')}\n` +
-        `DELTA XDE MESE TOTALE   €${p('xde')}\n\n` +
-        `IPHONE TOTALI/GARANZIE ${p('iphone')}\n` +
-        `APPLE  PC /GARANZIE ${p('apple')}\n\n` +
+        `DELTA XDE MESE    €${p('xde')}\n\n` +
+        `APPLE IPHONE/GAR. ${p('iphone')}\n` +
+        `APPLE  PC /GAR. ${p('apple')}\n\n` +
         `ATTIVAZIONI HO ${p('ho')}\n` +
         `ATTIVAZIONI VERY  ${p('very')}\n\n` +
         `OLED ${p('oled')}\n` +
-        `AEG BIANCO ${p('aeg')}\n` +
-        `ASCIUGATRICI ${p('asciugatrici')}\n` +
+        `AEG  ${p('aeg')}\n` +
+        `ASCIUGA  ${p('asciugatrici')}\n` +
         `SCOPE NO FILI ${p('scope')}\n` +
         `I-ROBOT ${p('irobot')}\n` +
         `CAFFE’ AUTOM. ${p('caffe')}`;
