--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
     <label>Finanziamenti / Safeguard</label>
     <input type="text" id="safeguard">
 
+    
+    <label>Venduto XD Ped Giorno</label>
+    <input type="text" id="venduto_xd">
+
     <label>Incidenza XD Ped Giorno</label>
     <input type="text" id="xdped">
 
