--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
         `VENDUTO : €${p('venduto')}\n` +
         `AV BUDGET MESE  : ${p('budget')}%\n\n` +
         `FINANZ./SAFEGUARD ${p('safeguard')}\n\n` +
+        `VENDUTO XD PED GIORNO €${p('venduto_xd')}\n` + 
         `INCID.XD PED OGGI ${p('xdped')}%\n\n` +
         `DELTA EKOS MESE €${p('ekos')}\n` +
         `DELTA SBS MESE  €${p('sbs')}\n` +
