--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
     <label>AV Budget Mese %</label>
     <input type="text" id="budget">
 
+    <label>Promo IVA Apple</label>
+    <input type="text" id="promo_iva_apple">
+
     <label>Finanziamenti / Safeguard</label>
     <input type="text" id="safeguard">
 
@@ -125,9 +128,16 @@
     function inviaTelegram() {
       const p = id => document.getElementById(id).value || '';
       const pv = p('puntoVendita');
+
+      if (!pv) {
+        alert("Seleziona il punto vendita prima di inviare.");
+        return;
+      }
+
       const msg = `DATI SERALI  ORE 20 :\n\n` +
         `VENDUTO : €${p('venduto')}\n` +
         `AV BUDGET MESE  : ${p('budget')}%\n\n` +
+        `PROMO IVA APPLE ${p('promo_iva_apple')}\n` +
         `FINANZ./SAFEGUARD ${p('safeguard')}\n` +
         `PAGODIL GIORNO ${p('pagodil_giorno')}\n` +
         `PAGODIL TOTALI ${p('pagodil_totali')}\n\n` +
