--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         `VENDUTO : €${p('venduto')}\n` +
         `AV BUDGET MESE  : ${p('budget')}%\n` +
         `DELTA MESE €${p('delta_mese')}\n\n` +
-        `PROMO IVA APPLE ${p('promo_iva_apple')}\n` +
+        `PROMO IVA APPLE ${p('promo_iva_apple')}\n\n` +
         `FINANZ./SAFEGUARD ${p('safeguard')}\n` +
         `PAGODIL GIORNO ${p('pagodil_giorno')}\n` +
         `PAGODIL TOTALI ${p('pagodil_totali')}\n\n` +
