--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
       const msg = `DATI SERALI  ORE 20 :\n\n` +
         `PUNTO VENDITA: ${pv}\n\n` +
         `VENDUTO : €${p('venduto')}\n` +
-        `AV BUDGET MESE  : ${p('budget')}%\n` +
+        `AV BUDGET MESE : ${p('budget')}%\n` +
         `DELTA MESE €${p('delta_mese')}\n\n` +
         `PROMO IVA APPLE ${p('promo_iva_apple')}\n\n` +
         `FINANZ./SAFEGUARD ${p('safeguard')}\n` +
         `PAGODIL GIORNO ${p('pagodil_giorno')}\n` +
         `PAGODIL TOTALI ${p('pagodil_totali')}\n\n` +
-        `VENDUTO XD PED GIORNO €${p('venduto_xd')}\n` + 
+        `VEND. XD PED GIORNO €${p('venduto_xd')}\n` + 
         `INCID.XD PED OGGI ${p('xdped')}%\n\n` +
         `DELTA EKOS MESE €${p('ekos')}\n` +
         `DELTA SBS MESE  €${p('sbs')}\n` +
