--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
     <label>Delta Mese (€)</label>
     <input type="text" id="delta_mese">
 
+    <label>Promo 50</label>
+    <input type="number" id="promo_50">
+
+    <label>Promo 100</label>
+    <input type="number" id="promo_100">
+
     <label>Finanziamenti / Safeguard</label>
     <input type="text" id="safeguard">
 
@@ -75,12 +81,6 @@
 
     <label>Pagodil Totali</label>
     <input type="text" id="pagodil_totali">
-
-    <label>Venduto XD Ped Giorno</label>
-    <input type="text" id="venduto_xd">
-
-    <label>Incidenza XD Ped Giorno</label>
-    <input type="text" id="xdped">
 
     <label>Delta EKOS Mese (Euro)</label>
     <input type="text" id="ekos">
@@ -138,12 +138,12 @@
         `PUNTO VENDITA: ${pv}\n\n` +
         `VENDUTO : €${p('venduto')}\n` +
         `AV BUDGET MESE : ${p('budget')}%\n` +
-        `DELTA MESE €${p('delta_mese')}\n\n` +
+        `DELTA MESE €${p('delta_mese')}\n` +
+        `PROMO 50: ${p('promo_50')}\n` +
+        `PROMO 100: ${p('promo_100')}\n\n` +
         `FINANZ./SAFEGUARD ${p('safeguard')}\n` +
         `PAGODIL GIORNO ${p('pagodil_giorno')}\n` +
         `PAGODIL TOTALI ${p('pagodil_totali')}\n\n` +
-        `VEND. XD PED GIORNO €${p('venduto_xd')}\n` + 
-        `INCID.XD PED OGGI ${p('xdped')}%\n\n` +
         `DELTA EKOS MESE €${p('ekos')}\n` +
         `DELTA SBS MESE  €${p('sbs')}\n` +
         `DELTA XDE MESE  €${p('xde')}\n\n` +
