--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
     <label>Delta Mese (€)</label>
     <input type="text" id="delta_mese">
 
+    <label>Delta Week in corso  (€)</label>
+    <input type="text" id="delta week in corso">
+
     <label>Finanziamenti / Safeguard</label>
     <input type="text" id="safeguard">
 
@@ -127,6 +130,7 @@
         `VENDUTO : €${p('venduto')}\n` +
         `AV BUDGET MESE : ${p('budget')}%\n` +
         `DELTA MESE €${p('delta_mese')}\n` +
+        `DELTA WEEK IN CORSO  €${p('delta week')}\n` +
         `FINANZ./SAFEGUARD ${p('safeguard')}\n\n` +
         `DELTA EKOS MESE €${p('ekos')}\n` +
         `DELTA SBS MESE  €${p('sbs')}\n` +
