--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       <option>Macerata</option>
       <option>Civitanova</option>
       <option>Pesaro</option>
+      <option>Foligno</option>
     </select>
 
     <label>Venduto Giorno</label>
