--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
 
     <label>Delta Mese (€)</label>
     <input type="text" id="delta_mese">
-    
-    <label>DELTA WEEK IN CORSO (€)</label>     <input type="text" id="delta_week">
+
+    <label>DELTA WEEK IN CORSO (€)</label>
+    <input type="text" id="delta_week">
 
     <label>Finanziamenti / Safeguard</label>
     <input type="text" id="safeguard">
@@ -125,32 +126,14 @@
         return;
       }
 
-      // La stringa del messaggio è stata aggiornata per includere il Delta Week
+      // La stringa del messaggio è formattata per avere gli spazi corretti come richiesto.
       const msg = `DATI SERALI  ORE 20 :\n\n` +
         `PUNTO VENDITA: ${pv}\n\n` +
         `VENDUTO : €${p('venduto')}\n` +
         `AV BUDGET MESE : ${p('budget')}%\n` +
         `DELTA MESE €${p('delta_mese')}\n` +
-        `DELTA WEEK IN CORSO €${p('delta_week')}\n\n` + // NUOVA VOCE AGGIUNTA
+        `DELTA WEEK IN CORSO €${p('delta_week')}\n\n` + 
         `FINANZ./SAFEGUARD ${p('safeguard')}\n\n` +
         `DELTA EKOS MESE €${p('ekos')}\n` +
         `DELTA SBS MESE  €${p('sbs')}\n` +
-        `DELTA XDE MESE  €${p('xde')}\n\n` +
-        `APPLE IPHONE/GAR.${p('iphone')}\n` +
-        `APPLE PC /GAR. ${p('apple')}\n\n` +
-        `ATTIVAZIONI HO ${p('ho')}\n` +
-        `ATTIVAZIONI VERY ${p('very')}\n\n` +
-        `OLED ${p('oled')}\n` +
-        `AEG  ${p('aeg')}\n` +
-        `ASCIUGA  ${p('asciugatrici')}\n` +
-        `SCOPE NO FILI ${p('scope')}\n` +
-        `I-ROBOT ${p('irobot')}\n` +
-        `CAFFE’AUTOM. ${p('caffe')}`;
-
-      const encoded = encodeURIComponent(msg);
-      window.open(`https://t.me/share/url?url=&text=${encoded}`, '_blank');
-    }
-  </script>
-
-</body>
-</html>
+        `DELTA XDE MESE  €${p('xde')}\n
